feat(npu.ipynb): add ASR example and update Python version requirement

--- a/examples/python/npu.ipynb
+++ b/examples/python/npu.ipynb
@@ -12,10 +12,11 @@
         "- **VLM (Vision Language Model)**: Multimodal understanding and generation\n",
         "- **Embedder**: Text vectorization and similarity computation\n",
         "- **Reranker**: Document reranking\n",
+        "- **ASR (Automatic Speech Recognition)**: Speech-to-text transcription\n",
         "\n",
         "## Prerequisites\n",
         "\n",
-        "- Python 3.10+\n",
+        "- Python 3.13\n",
         "- Windows ARM64 (Snapdragon X Elite) or NPU-capable device\n",
         "- NexaAI SDK installed: `pip install nexaai`\n",
         "\n",
@@ -35,7 +36,10 @@
         "\n",
         "# Reranker model\n",
         "nexa pull NexaAI/jina-v2-rerank-npu\n",
-        "```\n"
+        "\n",
+        "# ASR model\n",
+        "nexa pull NexaAI/parakeet-npu\n",
+        "```"
       ]
     },
     {
@@ -55,10 +59,11 @@
         "from nexaai.vlm import VLM\n",
         "from nexaai.embedder import Embedder, EmbeddingConfig\n",
         "from nexaai.rerank import Reranker, RerankConfig\n",
+        "from nexaai.asr import ASR, ASRConfig\n",
         "from nexaai.common import ModelConfig, ChatMessage, MultiModalMessage, MultiModalMessageContent\n",
         "\n",
         "print(\"NexaAI SDK imported successfully!\")\n",
-        "print(\"Ready to start NPU inference examples...\")\n"
+        "print(\"Ready to start NPU inference examples...\")"
       ]
     },
     {
@@ -350,7 +355,95 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 4. Reranker NPU Inference\n",
+        "## 4. ASR (Automatic Speech Recognition) NPU Inference\n",
+        "\n",
+        "Using NPU-accelerated speech recognition models for speech-to-text transcription. parakeet-npu provides high-quality speech recognition with NPU acceleration.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# ASR NPU Inference Example\n",
+        "def asr_npu_example():\n",
+        "    \"\"\"ASR NPU inference example\"\"\"\n",
+        "    print(\"=== ASR NPU Inference Example ===\")\n",
+        "    \n",
+        "    # Model configuration\n",
+        "    model_name = \"NexaAI/parakeet-npu\"\n",
+        "    plugin_id = \"npu\"\n",
+        "    device = \"npu\"\n",
+        "    \n",
+        "    print(f\"Loading model: {model_name}\")\n",
+        "    print(f\"Using plugin: {plugin_id}\")\n",
+        "    print(f\"Device: {device}\")\n",
+        "    \n",
+        "    # Create ASR instance\n",
+        "    asr = ASR.from_(name_or_path=model_name, plugin_id=plugin_id, device_id=device)\n",
+        "    print('ASR model loaded successfully!')\n",
+        "    \n",
+        "    # Example audio file (replace with your actual audio file)\n",
+        "    audio_file = \"path/to/your/audio.wav\"  # Replace with actual audio file path\n",
+        "    \n",
+        "    print(f\"\\nNote: Please update the audio_file path to point to your audio file\")\n",
+        "    print(f\"Current audio_file: {audio_file}\")\n",
+        "    \n",
+        "    # Check if audio file exists\n",
+        "    if not os.path.exists(audio_file):\n",
+        "        print(f\"Error: Audio file not found: {audio_file}\")\n",
+        "        print(\"Please provide a valid audio file path to test ASR functionality.\")\n",
+        "        return None\n",
+        "    \n",
+        "    # Basic ASR configuration\n",
+        "    config = ASRConfig(\n",
+        "        timestamps=\"segment\",  # Get segment-level timestamps\n",
+        "        beam_size=5,\n",
+        "        stream=False\n",
+        "    )\n",
+        "    \n",
+        "    print(f\"\\n=== Starting Transcription ===\")\n",
+        "    start_time = time.time()\n",
+        "    \n",
+        "    # Perform transcription\n",
+        "    result = asr.transcribe(audio_path=audio_file, language=\"en\", config=config)\n",
+        "    \n",
+        "    end_time = time.time()\n",
+        "    transcription_time = end_time - start_time\n",
+        "    \n",
+        "    # Display results\n",
+        "    print(f\"\\n=== Transcription Results ===\")\n",
+        "    print(f\"Transcription: {result.transcript}\")\n",
+        "    print(f\"Processing time: {transcription_time:.2f} seconds\")\n",
+        "    \n",
+        "    # Display segment information if available\n",
+        "    if hasattr(result, 'segments') and result.segments:\n",
+        "        print(f\"\\nSegments ({len(result.segments)}):\")\n",
+        "        for i, segment in enumerate(result.segments[:3]):  # Show first 3 segments\n",
+        "            start_time = segment.get('start', 'N/A')\n",
+        "            end_time = segment.get('end', 'N/A')\n",
+        "            text = segment.get('text', '').strip()\n",
+        "            print(f\"  {i+1}. [{start_time:.2f}s - {end_time:.2f}s] {text}\")\n",
+        "        if len(result.segments) > 3:\n",
+        "            print(f\"  ... and {len(result.segments) - 3} more segments\")\n",
+        "    \n",
+        "    # Get profiling data\n",
+        "    profiling_data = asr.get_profiling_data()\n",
+        "    if profiling_data:\n",
+        "        print(f\"\\nProfiling data: {profiling_data}\")\n",
+        "    \n",
+        "    return result\n",
+        "\n",
+        "# Run ASR example\n",
+        "result = asr_npu_example()\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 5. Reranker NPU Inference\n",
         "\n",
         "Using NPU-accelerated reranking models for document reranking. jina-v2-rerank-npu can perform precise similarity-based document ranking based on queries.\n"
       ]
