chore: clean up NPU model download instructions in notebooks and README

--- a/bindings/python/npu.ipynb
+++ b/bindings/python/npu.ipynb
@@ -18,28 +18,7 @@
         "\n",
         "- Python 3.13\n",
         "- Windows ARM64 (Snapdragon X Elite) or NPU-capable device\n",
-        "- NexaAI SDK installed: `pip install nexaai`\n",
-        "\n",
-        "## Model Download\n",
-        "\n",
-        "Before running the examples, download the corresponding NPU-optimized models:\n",
-        "\n",
-        "```bash\n",
-        "# LLM model\n",
-        "nexa pull NexaAI/Llama3.2-3B-NPU-Turbo\n",
-        "\n",
-        "# VLM model  \n",
-        "nexa pull NexaAI/OmniNeural-4B\n",
-        "\n",
-        "# Embedder model\n",
-        "nexa pull NexaAI/embeddinggemma-300m-npu\n",
-        "\n",
-        "# Reranker model\n",
-        "nexa pull NexaAI/jina-v2-rerank-npu\n",
-        "\n",
-        "# ASR model\n",
-        "nexa pull NexaAI/parakeet-npu\n",
-        "```"
+        "- NexaAI SDK installed: `pip install nexaai`"
       ]
     },
     {
