--- a/bindings/python/npu.ipynb
+++ b/bindings/python/npu.ipynb
@@ -410,7 +410,7 @@
         "    print(\"=== CV NPU Inference Example ===\")\n",
         "    \n",
         "    # Model configuration\n",
-        "    model_name = \"NexaAI/paddle-ocr-mlx\"  # Example CV model for OCR\n",
+        "    model_name = \"NexaAI/paddleocr-npu\"  # Example CV model for OCR\n",
         "    plugin_id = \"npu\"\n",
         "    device = \"npu\"\n",
         "    \n",
@@ -487,7 +487,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 4. ASR (Automatic Speech Recognition) NPU Inference\n",
+        "## 5. ASR (Automatic Speech Recognition) NPU Inference\n",
         "\n",
         "Using NPU-accelerated speech recognition models for speech-to-text transcription. parakeet-npu provides high-quality speech recognition with NPU acceleration.\n"
       ]
