feat(notebook): new loc and udpate token doc

--- a/bindings/python/notebook/npu.ipynb
+++ b/bindings/python/notebook/npu.ipynb
@@ -32,22 +32,6 @@
         "```bash\n",
         "import os\n",
         "os.environ[\"NEXA_TOKEN\"] = \"YOUR_NEXA_TOKEN_HERE\"\n",
-        "```\n",
-        "\n",
-        "### Alternative: Set Environment Variable\n",
-        "\n",
-        "You can also set the token as an environment variable before starting the notebook:\n",
-        "\n",
-        "**Windows:**\n",
-        "\n",
-        "```cmd\n",
-        "set NEXA_TOKEN=YOUR_NEXA_TOKEN_HERE\n",
-        "```\n",
-        "\n",
-        "**Linux/macOS:**\n",
-        "\n",
-        "```bash\n",
-        "export NEXA_TOKEN=\"YOUR_NEXA_TOKEN_HERE\"\n",
         "```\n"
       ]
     },
@@ -60,12 +44,7 @@
         "import os\n",
         "\n",
         "# Replace \"YOUR_NEXA_TOKEN_HERE\" with your actual token from https://sdk.nexa.ai/\n",
-        "os.environ[\"NEXA_TOKEN\"] = \"YOUR_NEXA_TOKEN_HERE\"\n",
-        "\n",
-        "if os.environ.get(\"NEXA_TOKEN\") and os.environ[\"NEXA_TOKEN\"] != \"YOUR_NEXA_TOKEN_HERE\":\n",
-        "    print(\"NEXA_TOKEN is set successfully!\")\n",
-        "else:\n",
-        "    print(\"Please set your NEXA_TOKEN before running the examples.\")\n"
+        "os.environ[\"NEXA_TOKEN\"] = \"YOUR_NEXA_TOKEN_HERE\"\n"
       ]
     },
     {
