docs(readme): update Python version requirements for SDK compatibility

--- a/bindings/python/notebook/npu.ipynb
+++ b/bindings/python/notebook/npu.ipynb
@@ -16,7 +16,7 @@
         "\n",
         "## Prerequisites\n",
         "\n",
-        "- Python 3.13\n",
+        "- Python 3.11–3.13\n",
         "- Windows ARM64 (Snapdragon X Elite) or NPU-capable device\n",
         "- NexaAI SDK installed: `pip install nexaai`\n",
         "- NEXA_TOKEN environment variable set (see next section)\n",
