fix: vlm image input

--- a/bindings/python/notebook/npu.ipynb
+++ b/bindings/python/notebook/npu.ipynb
@@ -141,7 +141,52 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "c:\\Users\\mengshengwu\\workspace\\nexa-sdk\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+            "  from .autonotebook import tqdm as notebook_tqdm\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "=== VLM NPU Inference Example ===\n",
+            "Loading model: NexaAI/OmniNeural-4B\n",
+            "Using plugin: npu\n",
+            "Device: npu\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "c:\\Users\\mengshengwu\\workspace\\nexa-sdk\\.venv\\Lib\\site-packages\\huggingface_hub\\file_download.py:982: UserWarning: `local_dir_use_symlinks` parameter is deprecated and will be ignored. The process to download files to a local folder has been updated and do not rely on symlinks anymore. You only need to pass a destination folder as`local_dir`.\n",
+            "For more details, check out https://huggingface.co/docs/huggingface_hub/main/en/guides/download#download-files-to-local-folder.\n",
+            "  warnings.warn(\n",
+            "Fetching 26 files: 100%|██████████| 26/26 [00:00<00:00, 2104.07it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[OK] Successfully created nexa.manifest for NexaAI/OmniNeural-4B\n",
+            "\n",
+            "--- Multimodal Conversation 1 ---\n",
+            "User: What do you see in this image?\n",
+            "Including image: c:/Users/mengshengwu/workspace/nexa-sdk/temp/screenshot-20250701-132611.png\n",
+            "Assistant: This image shows a screenshot of a file manager or file explorer interface. The interface displays a list of files and folders, with the selected file being \"libaaml-base.dylib\". The file size is 613 KB, and the modification time is yesterday at 08:08. The interface also includes a search bar at the top and a navigation bar at the bottom. The interface is in Chinese.\n",
+            "\n",
+            "Profiling data: ProfilingData(ttft=2410000, prompt_time=2408000, decode_time=3787000, prompt_tokens=19, generated_tokens=86, audio_duration=0, prefill_speed=7.8903654485049834, decoding_speed=22.709268550303673, real_time_factor=0.0, stop_reason='eos')\n",
+            "\n",
+            "==================================================\n"
+          ]
+        }
+      ],
       "source": [
         "import os\n",
         "import io\n",
@@ -177,15 +222,7 @@
         "    test_cases = [\n",
         "        {\n",
         "            \"text\": \"What do you see in this image?\",\n",
-        "            \"image_path\": None  # Replace with actual image path if available\n",
-        "        },\n",
-        "        {\n",
-        "            \"text\": \"Describe the main objects and their relationships.\",\n",
-        "            \"image_path\": None\n",
-        "        },\n",
-        "        {\n",
-        "            \"text\": \"What is artificial intelligence and how does it relate to computer vision?\",\n",
-        "            \"image_path\": None\n",
+        "            \"image_path\": '/your/image/path'  # Replace with actual image path if available\n",
         "        }\n",
         "    ]\n",
         "\n",
@@ -198,7 +235,7 @@
         "\n",
         "        # Add image content if available\n",
         "        if case['image_path'] and os.path.exists(case['image_path']):\n",
-        "            contents.append(MultiModalMessageContent(type=\"image\", text=case['image_path']))\n",
+        "            contents.append(MultiModalMessageContent(type=\"image\", path=case['image_path']))\n",
         "            print(f\"Including image: {case['image_path']}\")\n",
         "\n",
         "        # Add user message\n",
