refactor: optimize doc for prepare python

--- a/bindings/python/notebook/npu.ipynb
+++ b/bindings/python/notebook/npu.ipynb
@@ -17,10 +17,44 @@
         "\n",
         "## Prerequisites\n",
         "\n",
-        "- Python 3.11–3.13 (arm64 architecture required)\n",
-        "- Windows ARM64 (Snapdragon X Elite) or NPU-capable device\n",
-        "- NexaAI SDK installed: `pip install nexaai`\n",
-        "- NEXA_TOKEN environment variable set (see next section)\n",
+        "### 1. Install the correct Python version\n",
+        "NexaAI requires **Python 3.11 – 3.13 (ARM64 build)** on Windows ARM.\n",
+        "Please **download and install the official ARM64 Python** from the [python-3.11.1-arm64.exe](https://www.python.org/ftp/python/3.11.1/python-3.11.1-arm64.exe).\n",
+        "\n",
+        "> ⚠️ Do **not** use Conda or x86 builds — they are incompatible with native ARM64 binaries.\n",
+        "\n",
+        "Verify the installation:\n",
+        "\n",
+        "```sh\n",
+        "python -c \"import sys, platform; print(f'Python version: {sys.version} | Architecture: {platform.machine()}')\"\n",
+        "```\n",
+        "\n",
+        "Expected output should contain `arm64`.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### 2. Create and activate a virtual environment\n",
+        "\n",
+        "```sh\n",
+        "python -m venv nexaai-env\n",
+        "nexaai-env\\Scripts\\activate\n",
+        "```\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### 3. Install the NexaAI SDK\n",
+        "\n",
+        "```bash\n",
+        "pip install nexaai\n",
+        "```\n",
+        "\n",
+        "---\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "\n",
         "## Authentication Setup\n",
         "\n",
@@ -137,52 +171,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "c:\\Users\\mengshengwu\\workspace\\nexa-sdk\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-            "  from .autonotebook import tqdm as notebook_tqdm\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "=== VLM NPU Inference Example ===\n",
-            "Loading model: NexaAI/OmniNeural-4B\n",
-            "Using plugin: npu\n",
-            "Device: npu\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "c:\\Users\\mengshengwu\\workspace\\nexa-sdk\\.venv\\Lib\\site-packages\\huggingface_hub\\file_download.py:982: UserWarning: `local_dir_use_symlinks` parameter is deprecated and will be ignored. The process to download files to a local folder has been updated and do not rely on symlinks anymore. You only need to pass a destination folder as`local_dir`.\n",
-            "For more details, check out https://huggingface.co/docs/huggingface_hub/main/en/guides/download#download-files-to-local-folder.\n",
-            "  warnings.warn(\n",
-            "Fetching 26 files: 100%|██████████| 26/26 [00:00<00:00, 2104.07it/s]\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "[OK] Successfully created nexa.manifest for NexaAI/OmniNeural-4B\n",
-            "\n",
-            "--- Multimodal Conversation 1 ---\n",
-            "User: What do you see in this image?\n",
-            "Including image: c:/Users/mengshengwu/workspace/nexa-sdk/temp/screenshot-20250701-132611.png\n",
-            "Assistant: This image shows a screenshot of a file manager or file explorer interface. The interface displays a list of files and folders, with the selected file being \"libaaml-base.dylib\". The file size is 613 KB, and the modification time is yesterday at 08:08. The interface also includes a search bar at the top and a navigation bar at the bottom. The interface is in Chinese.\n",
-            "\n",
-            "Profiling data: ProfilingData(ttft=2410000, prompt_time=2408000, decode_time=3787000, prompt_tokens=19, generated_tokens=86, audio_duration=0, prefill_speed=7.8903654485049834, decoding_speed=22.709268550303673, real_time_factor=0.0, stop_reason='eos')\n",
-            "\n",
-            "==================================================\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import os\n",
         "import io\n",
