chore: update instructions in npu.ipynb

--- a/bindings/python/notebook/npu.ipynb
+++ b/bindings/python/notebook/npu.ipynb
@@ -29,7 +29,16 @@
         "python -c \"import sys, platform; print(f'Python version: {sys.version} | Architecture: {platform.machine()}')\"\n",
         "```\n",
         "\n",
-        "Expected output should contain `arm64`.\n",
+        "Expected output should contain `arm64` (**NOT** `AMD64`).\n",
+        "\n",
+        "If it does show `AMD64`, try the following:\n",
+        "- (If you have conda installed) Run `conda deactivate` to deactivate the current conda environment.\n",
+        "- (If your `python` executable points to the x86 version) You may need to make the ARM64 Python come before the x86 Python in your PATH.\n",
+        "    - Hit the `Win` key, and type `env`, and hit Enter to select `Edit the system environment variables` setting.\n",
+        "    - Click on `Environment Variables...` button.\n",
+        "    - Select `Path` and click `Edit...`.\n",
+        "    - Find your ARM64 Python installation path, and move it to the top of the list.\n",
+        "    - Hit `OK` for several times to close all the dialogs and save the changes.\n",
         "\n",
         "---\n",
         "\n",
@@ -48,7 +57,57 @@
         "pip install nexaai\n",
         "```\n",
         "\n",
-        "---\n"
+        "---\n",
+        "\n",
+        "### 4. Select the venv as your Jupyter Notebook kernel\n",
+        "- Depending the editor you are using, the way to change kernel might be different. For Cursor / VS Code, they are located at the top right corner of you code window.\n",
+        "- Look for and select the `nexaai-env`, or the custom virtual environment you have created. The kernel should automatically reload in most IDEs.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Verification of Kernel\n",
+        "\n",
+        "Run the following code to ensure you have the right kernel running."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import sys\n",
+        "import platform\n",
+        "\n",
+        "# ANSI color codes\n",
+        "RED = \"\\033[91m\"\n",
+        "GREEN = \"\\033[92m\"\n",
+        "YELLOW = \"\\033[93m\"\n",
+        "BOLD = \"\\033[1m\"\n",
+        "RESET = \"\\033[0m\"\n",
+        "\n",
+        "min_ver = (3, 11)\n",
+        "max_ver = (3, 13)\n",
+        "current_ver = sys.version_info\n",
+        "arch = platform.machine()\n",
+        "\n",
+        "if not (min_ver <= (current_ver.major, current_ver.minor) < max_ver) or arch.lower() != \"arm64\":\n",
+        "    print(\"\\n\" + \"=\"*80)\n",
+        "    print(f\"{BOLD}{RED}WARNING: Your Python version or architecture is not compatible.{RESET}\")\n",
+        "    print(f\"Detected version: {current_ver.major}.{current_ver.minor}, architecture: {arch}\")\n",
+        "    print(f\"{YELLOW}Required: Python 3.11 - 3.13 & architecture 'arm64'.{RESET}\")\n",
+        "    print(\"=\"*80)\n",
+        "    print(f\"{RED}DO NOT continue to the following code!{RESET}\\n\")\n",
+        "    print(\"To install arm64 Python:\")\n",
+        "    print(\"  - Download Python 3.11-3.13 for arm64 from https://www.python.org/downloads/\")\n",
+        "    print(\"  - Install and verify by running: python3 --version and python3 -c 'import platform; print(platform.machine())'\")\n",
+        "    print(\"  - Launch Jupyter and make sure to select the arm64 Python kernel in 'Kernel > Change kernel'.\")\n",
+        "    sys.exit(1)\n",
+        "else:\n",
+        "    print(f\"{GREEN}[VERIFICATION PASSED] Python version and architecture are correct. You may continue to the following sections.{RESET}\")\n"
       ]
     },
     {
@@ -74,7 +133,9 @@
         "import os\n",
         "\n",
         "# Replace \"YOUR_NEXA_TOKEN_HERE\" with your actual token from https://sdk.nexa.ai/\n",
-        "os.environ[\"NEXA_TOKEN\"] = \"YOUR_NEXA_TOKEN_HERE\"\n"
+        "os.environ[\"NEXA_TOKEN\"] = \"YOUR_NEXA_TOKEN_HERE\"\n",
+        "\n",
+        "assert os.environ.get(\"NEXA_TOKEN\", \"\").startswith(\"key/\"), \"ERROR: NEXA_TOKEN must start with 'key/'. Please check your token.\"\n"
       ]
     },
     {
@@ -93,6 +154,7 @@
       "outputs": [],
       "source": [
         "import io\n",
+        "import os\n",
         "\n",
         "from nexaai.common import GenerationConfig, ModelConfig, ChatMessage\n",
         "from nexaai.llm import LLM\n",
@@ -103,7 +165,12 @@
         "    print(\"=== LLM NPU Inference Example ===\")\n",
         "\n",
         "    # Model configuration\n",
+        "\n",
+        "    # Use huggingface Repo ID\n",
         "    model_name = \"NexaAI/Llama3.2-3B-NPU-Turbo\"\n",
+        "    # Alternatively, use local path\n",
+        "    # model_name = os.path.expanduser(r\"~\\.cache\\nexa.ai\\nexa_sdk\\models\\NexaAI\\Llama3.2-3B-NPU-Turbo\\weights-1-3.nexa\")\n",
+        "\n",
         "    plugin_id = \"npu\"\n",
         "    device = \"npu\"\n",
         "    max_tokens = 100\n",
@@ -185,15 +252,28 @@
         "    print(\"=== VLM NPU Inference Example ===\")\n",
         "\n",
         "    # Model configuration\n",
+        "\n",
+        "    # Use huggingface repo ID\n",
         "    model_name = \"NexaAI/OmniNeural-4B\"\n",
+        "    # Alternatively, use local path\n",
+        "    # model_name = os.path.expanduser(r\"~\\.cache\\nexa.ai\\nexa_sdk\\models\\NexaAI\\OmniNeural-4B\\weights-1-8.nexa\")\n",
+        "    \n",
+        "    \n",
         "    plugin_id = \"npu\"\n",
         "    device = \"npu\"\n",
         "    max_tokens = 100\n",
         "    system_message = \"You are a helpful assistant that can understand images and text.\"\n",
+        "    image_path = '/your/image/path'  # Replace with actual image path if available\n",
         "\n",
         "    print(f\"Loading model: {model_name}\")\n",
         "    print(f\"Using plugin: {plugin_id}\")\n",
         "    print(f\"Device: {device}\")\n",
+        "\n",
+        "     # Check for image existence\n",
+        "    if not (image_path and os.path.exists(image_path)):\n",
+        "        print(f\"\\033[93mWARNING: The specified image_path ('{image_path}') does not exist or was not provided. Multimodal prompts will not include image input.\\033[0m\")\n",
+        "\n",
+        "\n",
         "\n",
         "    # Create model instance\n",
         "    m_cfg = ModelConfig()\n",
@@ -207,7 +287,7 @@
         "    test_cases = [\n",
         "        {\n",
         "            \"text\": \"What do you see in this image?\",\n",
-        "            \"image_path\": '/your/image/path'  # Replace with actual image path if available\n",
+        "            \"image_path\": image_path\n",
         "        }\n",
         "    ]\n",
         "\n",
@@ -284,7 +364,12 @@
         "    print(\"=== Embedder NPU Inference Example ===\")\n",
         "\n",
         "    # Model configuration\n",
+        "\n",
+        "    # Use huggingface repo ID\n",
         "    model_name = \"NexaAI/embeddinggemma-300m-npu\"\n",
+        "    # Alternatively, use local path\n",
+        "    # model_name = os.path.expanduser(r\"~\\.cache\\nexa.ai\\nexa_sdk\\models\\NexaAI\\embeddinggemma-300m-npu\\weights-1-2.nexa\")\n",
+        "\n",
         "    plugin_id = \"npu\"\n",
         "    batch_size = 2\n",
         "\n",
@@ -396,21 +481,27 @@
         "    print(\"=== ASR NPU Inference Example ===\")\n",
         "\n",
         "    # Model configuration\n",
+        "\n",
+        "    # Use huggingface Repo ID\n",
         "    model_name = \"NexaAI/parakeet-npu\"\n",
+        "    # Alternatively, use local path\n",
+        "    # model_name = os.path.expanduser(r\"~\\.cache\\nexa.ai\\nexa_sdk\\models\\NexaAI\\parakeet-npu\\weights-1-5.nexa\")\n",
+        "\n",
         "    plugin_id = \"npu\"\n",
         "    device = \"npu\"\n",
+        "    # Example audio file (replace with your actual audio file)\n",
+        "    audio_file = r\"path/to/audio\"  # Replace with actual audio file path\n",
         "\n",
         "    print(f\"Loading model: {model_name}\")\n",
         "    print(f\"Using plugin: {plugin_id}\")\n",
         "    print(f\"Device: {device}\")\n",
         "\n",
+        "    assert os.path.exists(audio_file), f\"ERROR: The specified audio_file ('{audio_file}') does not exist. Please provide a valid audio file path to test ASR functionality.\"\n",
+        "\n",
         "    # Create ASR instance\n",
         "    asr = ASR.from_(name_or_path=model_name, plugin_id=plugin_id, device_id=device)\n",
         "    print('ASR model loaded successfully!')\n",
-        "\n",
-        "    # Example audio file (replace with your actual audio file)\n",
-        "    audio_file = \"Users/mengshengwu/workspace/nexa-sdk/temp/jfk.wav\"  # Replace with actual audio file path\n",
-        "\n",
+        "    \n",
         "    print(f\"\\nNote: Please update the audio_file path to point to your audio file\")\n",
         "    print(f\"Current audio_file: {audio_file}\")\n",
         "\n",
@@ -486,7 +577,13 @@
         "    print(\"=== Reranker NPU Inference Example ===\")\n",
         "\n",
         "    # Model configuration\n",
+        "\n",
+        "    # Use huggingface repo ID\n",
         "    model_name = \"NexaAI/jina-v2-rerank-npu\"\n",
+        "    # Alternatively, use local path\n",
+        "    # model_name = os.path.expanduser(r\"~\\.cache\\nexa.ai\\nexa_sdk\\models\\NexaAI\\jina-v2-rerank-npu\\weights-1-4.nexa\")\n",
+        "\n",
+        "\n",
         "    plugin_id = \"npu\"\n",
         "    batch_size = 4\n",
         "\n",
@@ -574,14 +671,20 @@
         "from nexaai.cv import CVCapabilities, CVModel, CVModelConfig, CVResults\n",
         "\n",
         "def cv_ocr_example():\n",
+        "\n",
+        "    # Use huggingface repo ID\n",
+        "    model_name = \"NexaAI/paddleocr-npu\"\n",
+        "    # Alternatively, use local path\n",
+        "    # model_name = os.path.expanduser(r\"~\\.cache\\nexa.ai\\nexa_sdk\\models\\NexaAI\\paddleocr-npu\\weights-1-1.nexa\")\n",
+        "\n",
+        "    image_path = r\"path/to/image\"\n",
+        "\n",
         "    config = CVModelConfig(capabilities=CVCapabilities.OCR)\n",
         "    cv = CVModel.from_(name_or_path=\"NexaAI/paddleocr-npu\", config=config, plugin_id='npu')\n",
-        "    image = '/path/to/image'\n",
         "\n",
-        "    if not os.path.exists(image):\n",
-        "        raise FileNotFoundError(f\"Image file not found: {image}\")\n",
+        "    assert os.path.exists(image_path), f\"ERROR: Image file not found: {image_path}\"\n",
         "        \n",
-        "    results = cv.infer(image)\n",
+        "    results = cv.infer(image_path)\n",
         "\n",
         "    print(f\"Number of results: {results.result_count}\")\n",
         "    for result in results.results:\n",
