--- a/bindings/python/notebook/npu.ipynb
+++ b/bindings/python/notebook/npu.ipynb
@@ -26,12 +26,16 @@
         "Verify the installation:\n",
         "\n",
         "```sh\n",
-        "python -c \"import sys, platform; print(f'Python version: {sys.version} | Architecture: {platform.machine()}')\"\n",
+        "python -c \"import sys, platform; print(f'Python version: {sys.version}')\"\n",
         "```\n",
         "\n",
-        "Expected output should contain `arm64` (**NOT** `AMD64`).\n",
+        "Your output should look something like:\n",
         "\n",
-        "If it does show `AMD64`, try the following:\n",
+        "> Python version: 3.XX.XX (...) [MSC v.1938 64 bit (**ARM64**)]\n",
+        "\n",
+        "Expected output should contain `arm64` or other architectures (**NOT** `AMD64`).\n",
+        "\n",
+        "If it does show `AMD64` or some other architectures, try the following:\n",
         "- (If you have conda installed) Run `conda deactivate` to deactivate the current conda environment.\n",
         "- (If your `python` executable points to the x86 version) You may need to make the ARM64 Python come before the x86 Python in your PATH.\n",
         "    - Hit the `Win` key, and type `env`, and hit Enter to select `Edit the system environment variables` setting.\n",
@@ -698,7 +702,7 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": ".venv",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -712,7 +716,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.13.0"
+      "version": "3.11.9"
     }
   },
   "nbformat": 4,
