chore: add instructions about the installation wizard

--- a/bindings/python/notebook/npu.ipynb
+++ b/bindings/python/notebook/npu.ipynb
@@ -19,9 +19,11 @@
         "\n",
         "### 1. Install the correct Python version\n",
         "NexaAI requires **Python 3.11 – 3.13 (ARM64 build)** on Windows ARM.\n",
-        "Please **download and install the official ARM64 Python** from the [python-3.11.1-arm64.exe](https://www.python.org/ftp/python/3.11.1/python-3.11.1-arm64.exe).\n",
+        "Please **download and install the official ARM64 Python** from the [python-3.11.1-arm64.exe](https://www.python.org/ftp/python/3.11.1/python-3.11.1-arm64.exe). Make sure you read the instructions below carefully before proceeding.\n",
         "\n",
-        "> ⚠️ Do **not** use Conda or x86 builds — they are incompatible with native ARM64 binaries.\n",
+        "> ❗ **IMPORTANT**: Make sure you select \"Add python.exe to PATH\" on the first screen of the installation wizard.\n",
+        "\n",
+        "> ⚠️ Do **not** use Conda or x86 builds — they are incompatible with native ARM64 binaries. If you are in a conda environment, run `conda deactivate` first.\n",
         "\n",
         "Verify the installation:\n",
         "\n",
