chore: even more detailed instruction on how to install arm64 python...

--- a/bindings/python/notebook/npu.ipynb
+++ b/bindings/python/notebook/npu.ipynb
@@ -25,6 +25,8 @@
         "\n",
         "> ⚠️ Do **not** use Conda or x86 builds — they are incompatible with native ARM64 binaries. If you are in a conda environment, run `conda deactivate` first.\n",
         "\n",
+        "\n",
+        "\n",
         "Verify the installation:\n",
         "\n",
         "```sh\n",
@@ -45,10 +47,15 @@
         "    - Select `Path` and click `Edit...`.\n",
         "    - Find your ARM64 Python installation path, and move it to the top of the list.\n",
         "    - Hit `OK` for several times to close all the dialogs and save the changes.\n",
+        "- (If you forgot to select \"Add python.exe to PATH\" on the first screen of the installation wizard)\n",
+        "    - Run the installation wizard again, follow the instructions to remove the current installation, and then reinstall from the Wizard. Make sure to select \"Add python.exe to PATH\" this time.\n",
+        "\n",
         "\n",
         "---\n",
         "\n",
         "### 2. Create and activate a virtual environment\n",
+        "\n",
+        "`cd` to the current project root directory `cd path/to/nexa-sdk`.\n",
         "\n",
         "```sh\n",
         "python -m venv nexaai-env\n",
