fix: incorrect variable usage for cv model in npu notebook

--- a/bindings/python/notebook/npu.ipynb
+++ b/bindings/python/notebook/npu.ipynb
@@ -693,7 +693,7 @@
         "    image_path = r\"path/to/image\"\n",
         "\n",
         "    config = CVModelConfig(capabilities=CVCapabilities.OCR)\n",
-        "    cv = CVModel.from_(name_or_path=\"NexaAI/paddleocr-npu\", config=config, plugin_id='npu')\n",
+        "    cv = CVModel.from_(name_or_path=model_name, config=config, plugin_id='npu')\n",
         "\n",
         "    assert os.path.exists(image_path), f\"ERROR: Image file not found: {image_path}\"\n",
         "        \n",
